Grid.Mvc Deleted

--- a/OctagonPlatform/Web.config
+++ b/OctagonPlatform/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <!--Cada vez que se haga un update database hacerlo tambien para mi data base local-->
-    <add name="LocalConection" connectionString="Server=tcp:xyncro.database.windows.net,1433;Initial Catalog=octagonPlatform;Persist Security Info=False;User ID=xyncroadminsa;Password=xyncro2017!@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30; " providerName="System.Data.SqlClient"/>
+    <add name="LocalConection" connectionString="Server=tcp:xyncro.database.windows.net,1433;Initial Catalog=octagonPlatform;Persist Security Info=False;User ID=xyncroadminsa;Password=xyncro2017!@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30; " providerName="System.Data.SqlClient" />
     <!--<add name="LocalConection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=OctagonPlatform;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="LocalConection" connectionString="Data Source=DESKTOP-I1KBFAR\SQLEXPRESS;Initial Catalog=OctagonPlatform;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
@@ -35,11 +35,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-  <pages>
-      <namespaces>
-        <add namespace="GridMvc" />
-      </namespaces>
-    </pages></system.web>
+  </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
