--- a/OctagonPlatform/Web.config
+++ b/OctagonPlatform/Web.config
@@ -10,9 +10,9 @@
   </configSections>
   <connectionStrings>
     <!--Cada vez que se haga un update database hacerlo tambien para mi data base local-->
-    <!--<add name="LocalConection" connectionString="Server=tcp:xyncro.database.windows.net,1433;Initial Catalog=octagonPlatform;Persist Security Info=False;User ID=xyncroadminsa;Password=xyncro2017!@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30; " providerName="System.Data.SqlClient" />-->
+    <add name="LocalConection" connectionString="Server=tcp:xyncro.database.windows.net,1433;Initial Catalog=octagonPlatform;Persist Security Info=False;User ID=xyncroadminsa;Password=xyncro2017!@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30; " providerName="System.Data.SqlClient" />
     <!--<add name="LocalConection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=OctagonPlatform;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="LocalConection" connectionString="Data Source=DESKTOP-I1KBFAR\SQLEXPRESS;Initial Catalog=OctagonPlatform;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="LocalConection" connectionString="Data Source=DESKTOP-I1KBFAR\SQLEXPRESS;Initial Catalog=OctagonPlatform;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
