--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -318,6 +318,10 @@
     <Compile Include="Migrations\201708292144098_deleteLogoModel.Designer.cs">
       <DependentUpon>201708292144098_deleteLogoModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708301536055_ScriptSetOfPermisson.cs" />
+    <Compile Include="Migrations\201708301536055_ScriptSetOfPermisson.Designer.cs">
+      <DependentUpon>201708301536055_ScriptSetOfPermisson.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\City.cs" />
@@ -711,6 +715,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708292144098_deleteLogoModel.resx">
       <DependentUpon>201708292144098_deleteLogoModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708301536055_ScriptSetOfPermisson.resx">
+      <DependentUpon>201708301536055_ScriptSetOfPermisson.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
