--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -91,6 +91,7 @@
     <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
       <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.Shell.15.0, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
@@ -98,6 +99,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity.Design" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -316,6 +318,14 @@
     <Compile Include="Migrations\201708282250512_ChangedPhoneFromLongToString2.Designer.cs">
       <DependentUpon>201708282250512_ChangedPhoneFromLongToString2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709030055313_UniqueCollumnsInPartners.cs" />
+    <Compile Include="Migrations\201709030055313_UniqueCollumnsInPartners.Designer.cs">
+      <DependentUpon>201709030055313_UniqueCollumnsInPartners.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709030056438_UniqueCollumnsInPartnersEmail.cs" />
+    <Compile Include="Migrations\201709030056438_UniqueCollumnsInPartnersEmail.Designer.cs">
+      <DependentUpon>201709030056438_UniqueCollumnsInPartnersEmail.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\DeleteLogoModel.cs" />
     <Compile Include="Migrations\DeleteLogoModel.Designer.cs">
       <DependentUpon>DeleteLogoModel.cs</DependentUpon>
@@ -492,9 +502,11 @@
     <Content Include="Content\assets\js\script.min.js" />
     <Content Include="Content\bootstrap-cosmo.min.css" />
     <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min-superhero.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
+    <Content Include="Content\loading_icon.gif" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -623,22 +635,21 @@
     <Content Include="Views\PartnerContacts\Edit.cshtml" />
     <Content Include="Views\Partners\Details.cshtml" />
     <Content Include="Views\Users\Details.cshtml" />
-    <Content Include="Views\Partners\Sections\Info.cshtml" />
     <Content Include="Views\Partners\Sections\Contacts.cshtml" />
     <Content Include="Views\Partners\Sections\Users.cshtml" />
     <Content Include="Views\Partners\Sections\Partners.cshtml" />
     <Content Include="Views\Partners\Sections\BankAccounts.cshtml" />
     <Content Include="Views\Partners\Sections\Terminals.cshtml" />
-    <Content Include="Views\Partners\Sections\Logo.cshtml" />
     <Content Include="Views\Users\Sections\BankAccounts.cshtml" />
     <Content Include="Views\Users\Sections\GenralInfo.cshtml" />
     <Content Include="Views\Users\Sections\Reports.cshtml" />
     <Content Include="Views\Users\Sections\Terminals.cshtml" />
+    <Content Include="Views\Partners\Sections\GeneralInfo.cshtml" />
+    <Content Include="Views\Logos\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\Uploads\PartnerLogos\" />
-    <Folder Include="Content\Uploads\TerminalPictures\" />
+    <Folder Include="Uploads\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -731,6 +742,12 @@
     <EmbeddedResource Include="Migrations\201708282250512_ChangedPhoneFromLongToString2.resx">
       <DependentUpon>201708282250512_ChangedPhoneFromLongToString2.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709030055313_UniqueCollumnsInPartners.resx">
+      <DependentUpon>201709030055313_UniqueCollumnsInPartners.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709030056438_UniqueCollumnsInPartnersEmail.resx">
+      <DependentUpon>201709030056438_UniqueCollumnsInPartnersEmail.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\DeleteLogoModel.resx">
       <DependentUpon>DeleteLogoModel.cs</DependentUpon>
     </EmbeddedResource>
@@ -752,7 +769,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>51141</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
