Search Partner, Partner completed

--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -606,6 +606,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\Search.js" />
     <Content Include="Scripts\xpopulate.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -647,6 +648,7 @@
     <Content Include="Views\Users\Sections\Terminals.cshtml" />
     <Content Include="Views\Partners\Sections\GeneralInfo.cshtml" />
     <Content Include="Views\Logos\Index.cshtml" />
+    <Content Include="Views\Partners\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
