--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\CommunicationType.cs" />
     <Compile Include="Helpers\CustomRoleProvider.cs" />
     <Compile Include="Helpers\IAuditEntity.cs" />
     <Compile Include="Helpers\ISoftDeleted.cs" />
@@ -326,6 +327,22 @@
     <Compile Include="Migrations\201709052040597_UniquePartnerContactEmail.Designer.cs">
       <DependentUpon>201709052040597_UniquePartnerContactEmail.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709092221415_TerminalTerminalContactModelMake.cs" />
+    <Compile Include="Migrations\201709092221415_TerminalTerminalContactModelMake.Designer.cs">
+      <DependentUpon>201709092221415_TerminalTerminalContactModelMake.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709100144052_PopulateMake.cs" />
+    <Compile Include="Migrations\201709100144052_PopulateMake.Designer.cs">
+      <DependentUpon>201709100144052_PopulateMake.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709100236401_PopulateModels.cs" />
+    <Compile Include="Migrations\201709100236401_PopulateModels.Designer.cs">
+      <DependentUpon>201709100236401_PopulateModels.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709100303426_PopulateLocationTypes.cs" />
+    <Compile Include="Migrations\201709100303426_PopulateLocationTypes.Designer.cs">
+      <DependentUpon>201709100303426_PopulateLocationTypes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\DeleteLogoModel.cs" />
     <Compile Include="Migrations\DeleteLogoModel.Designer.cs">
       <DependentUpon>DeleteLogoModel.cs</DependentUpon>
@@ -351,11 +368,16 @@
     <Compile Include="Models\FormsViewModels\PartnerContactFormViewModel.cs" />
     <Compile Include="Models\FormsViewModels\PartnerFormViewModel.cs" />
     <Compile Include="Models\FormsViewModels\UserFormViewModel.cs" />
+    <Compile Include="Models\LocationType.cs" />
+    <Compile Include="Models\Make.cs" />
+    <Compile Include="Models\Model.cs" />
     <Compile Include="Models\Partner.cs" />
     <Compile Include="Models\PartnerContact.cs" />
     <Compile Include="Models\Permission.cs" />
     <Compile Include="Models\SetOfPermission.cs" />
     <Compile Include="Models\State.cs" />
+    <Compile Include="Models\Terminal.cs" />
+    <Compile Include="Models\TerminalContact.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="PersistanceRepository\AccountRepository.cs" />
     <Compile Include="PersistanceRepository\GenericRepository.cs" />
@@ -753,6 +775,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709052040597_UniquePartnerContactEmail.resx">
       <DependentUpon>201709052040597_UniquePartnerContactEmail.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709092221415_TerminalTerminalContactModelMake.resx">
+      <DependentUpon>201709092221415_TerminalTerminalContactModelMake.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709100144052_PopulateMake.resx">
+      <DependentUpon>201709100144052_PopulateMake.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709100236401_PopulateModels.resx">
+      <DependentUpon>201709100236401_PopulateModels.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709100303426_PopulateLocationTypes.resx">
+      <DependentUpon>201709100303426_PopulateLocationTypes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\DeleteLogoModel.resx">
       <DependentUpon>DeleteLogoModel.cs</DependentUpon>
